# chemfilter

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  chemfilter.cpp  chemfilter.h  chemfilter.ui  clearthread.cpp  clearthread.h  convert.py  delegate.cpp  delegate.h  enterresult.cpp  enterresult.h  enterresult.ui  freezetable.cpp  freezetable.h  heighttextedit.cpp  heighttextedit.h  histwidget.cpp  histwidget.h  info.rc  lap_checkbox.h  main.cpp  newcolumn.cpp  newcolumn.h  newcolumn.ui  qsarsortmodel.cpp  qsarsortmodel.h  qsartablemodel.cpp  qsartablemodel.h  resources.qrc  transformermodel.cpp  transformermodel.h
cmake/modules/: FindOpenBLAS.cmake  FindOpenBabel3.cmake
models/ames/: info
models/caco2/: info
models/cyp2c9/: info
models/cyp3a4/: info
models/dmso/: info
models/fu/: info
models/herg/: info
models/hia/: info
models/hob/: info
models/ld50/: info
models/logd/: info
models/metabolic_stability/: info
models/pgp_inhibitor/: info
models/pgp_substrate/: info
models/pka/: info
models/ppb/: info
models/solubility/: info  solubility-1.trm  solubility-2.trm  solubility-3.trm
models/vod/: info
prognosis/: CMakeLists.txt  prognosis.cpp
style/: qplastiquestyle.cpp
syntax/: script.txt
